--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       <section class="places">
         <div class="place">
           <ul class="place__list">
-            <li><p class="place__title">Куршская коса</p></li>
+            <li><h3 class="place__title">Куршская коса</h3></li>
             <li>
               <img
                 src="./images/place-kosa.jpg"
@@ -160,7 +160,7 @@
 
         <div class="place">
           <ul class="place__list_other">
-            <li><p class="place__title_other">Кольский</p></li>
+            <li><h3 class="place__title_other">Кольский</h3></li>
             <li>
               <img
                 src="./images/place-kolsky.jpg"
@@ -203,7 +203,7 @@
 
         <div class="place">
           <ul class="place__list_other">
-            <li><p class="place__title_other">Алтай</p></li>
+            <li><h3 class="place__title_other">Алтай</h3></li>
             <li>
               <img
                 src="./images/place-altai.jpg"
@@ -246,7 +246,7 @@
 
         <div class="place">
           <ul class="place__list">
-            <li><p class="place__title">Зимний Байкал</p></li>
+            <li><h3 class="place__title">Зимний Байкал</h3></li>
             <li>
               <img
                 src="./images/place-winter-baikal.jpg"
@@ -288,7 +288,7 @@
 
         <div class="place">
           <ul class="place__list_other">
-            <li><p class="place__title_other">Карелия</p></li>
+            <li><h3 class="place__title_other">Карелия</h3></li>
             <li>
               <img
                 src="./images/place-karelia.jpg"
