--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="page">
       <header class="header">
         <img
-          src="../3 project/images/header-logo.svg"
+          src="./images/header-logo.svg"
           alt="лого хедр"
           class="header__logo"
         />
@@ -56,76 +56,78 @@
       </section>
       <section class="photo-grid">
         <img
-          src="../3 project/images/photo-grid-train.jpg"
+          src="./images/photo-grid-train.jpg"
           alt="1"
           class="photo-grid__image"
         />
         <img
-          src="../3 project/images/photo-grid-atharva-tulsi.jpg"
+          src="./images/photo-grid-atharva-tulsi.jpg"
           alt="2"
           class="photo-grid__image"
         />
         <img
-          src="../3 project/images/photo-grid-tuman.jpg"
+          src="./images/photo-grid-tuman.jpg"
           alt="3"
           class="photo-grid__image"
         />
         <img
-          src="../3 project/images/photo-grid-sochi.jpg"
+          src="./images/photo-grid-sochi.jpg"
           alt="4"
           class="photo-grid__image"
         />
         <img
-          src="../3 project/images/photo-grid-arisa.jpg"
+          src="./images/photo-grid-arisa.jpg"
           alt="5"
           class="photo-grid__image"
         />
         <img
-          src="../3 project/images/photo-grid-baikal.jpg"
+          src="./images/photo-grid-baikal.jpg"
           alt="6"
           class="photo-grid__image"
         />
         <img
-          src="../3 project/images/photo-grid-elbrus.jpg"
+          src="./images/photo-grid-elbrus.jpg"
           alt="7"
           class="photo-grid__image"
         />
         <img
-          src="../3 project/images/photo-grid-kondratiev.jpg"
+          src="./images/photo-grid-kondratiev.jpg"
           alt="8"
           class="photo-grid__image"
         />
         <img
-          src="../3 project/images/photo-grid-kamchatka-1.jpg"
+          src="./images/photo-grid-kamchatka-1.jpg"
           alt="9"
           class="photo-grid__image"
         />
         <img
-          src="../3 project/images/photo-grid-kamchatka-2.jpg"
+          src="./images/photo-grid-kamchatka-2.jpg"
           alt="10"
           class="photo-grid__image"
         />
         <img
-          src="../3 project/images/photo-grid-baikal-2.jpg"
+          src="./images/photo-grid-baikal-2.jpg"
           alt="11"
           class="photo-grid__image"
         />
         <img
-          src="../3 project/images/photo-grid-ergaki.jpg"
+          src="./images/photo-grid-ergaki.jpg"
           alt="12"
           class="photo-grid__image"
         />
-      </section> 
+      </section>
 
       <section class="places">
         <div class="place">
           <ul class="place__list">
-            <h2 class="place__title">Куршская коса</h2>
-            <img
-              src="../3 project/images/place-kosa.jpg"
-              alt="фотка косы"
-              class="place__image"
-            />
+            <li><h3 class="place__title">Куршская коса</h3></li>
+            <li>
+              <img
+                src="./images/place-kosa.jpg"
+                alt="фотка косы"
+                class="place__image"
+              />
+            </li>
           </ul>
           <ul class="website">
             <li class="place__url-heading">URL</li>
@@ -158,12 +160,14 @@
 
         <div class="place">
           <ul class="place__list_other">
-            <h2 class="place__title_other">Кольский</h2>
-            <img
-              src="../3 project/images/place-kolsky.jpg"
-              alt="фотка кольского"
-              class="place__image"
-            />
+            <li><h3 class="place__title_other">Кольский</h3></li>
+            <li>
+              <img
+                src="./images/place-kolsky.jpg"
+                alt="фотка кольского"
+                class="place__image"
+              />
+            </li>
           </ul>
           <ul class="website">
             <li class="place__url-heading">URL</li>
@@ -199,12 +203,14 @@
 
         <div class="place">
           <ul class="place__list_other">
-            <h2 class="place__title_other">Алтай</h2>
-            <img
-              src="../3 project/images/place-altai.jpg"
-              alt="фотка кольского"
-              class="place__image"
-            />
+            <li><h3 class="place__title_other">Алтай</h3></li>
+            <li>
+              <img
+                src="./images/place-altai.jpg"
+                alt="фотка кольского"
+                class="place__image"
+              />
+            </li>
           </ul>
           <ul class="website">
             <li class="place__url-heading">URL</li>
@@ -240,12 +246,14 @@
 
         <div class="place">
           <ul class="place__list">
-            <h2 class="place__title">Зимний Байкал</h2>
-            <img
-              src="../3 project/images/place-winter-baikal.jpg"
-              alt="фотка кольского"
-              class="place__image"
-            />
+            <li><h3 class="place__title">Зимний Байкал</h3></li>
+            <li>
+              <img
+                src="./images/place-winter-baikal.jpg"
+                alt="фотка кольского"
+                class="place__image"
+              />
+            </li>
           </ul>
           <ul class="website">
             <li class="place__url-heading">URL</li>
@@ -280,18 +288,21 @@
 
         <div class="place">
           <ul class="place__list_other">
-            <h2 class="place__title_other">Карелия</h2>
-            <img
-              src="../3 project/images/place-karelia.jpg"
-              alt="фотка кольского"
-              class="place__image"
-            />
+            <li><h3 class="place__title_other">Карелия</h3></li>
+            <li>
+              <img
+                src="./images/place-karelia.jpg"
+                alt="фотка кольского"
+                class="place__image"
+              />
+            </li>
           </ul>
           <ul class="website">
             <li class="place__url-heading">URL</li>
             <li>
               <a href="http://vodlozero.ru" target="_blank" class="place__link"
-                >http://vodlozero.ru/</a>
+                >http://vodlozero.ru/</a
+              >
             </li>
 
             <li>
@@ -310,24 +321,49 @@
           </ul>
         </div>
       </section>
-          <section class="cover">
-        <a class="cover__overlay" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
+      <section class="cover">
+        <a
+          class="cover__overlay"
+          href="https://stampsy.com/na-elektrichkakh-do-baikala"
+          target="_blank"
+        >
           <h2 class="cover__title">До Байкала «на собаках»</h2>
-          
-            <h3 class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до
-              Байкала на электричках.</h3>
-            </a>
-              </section>
+
+          <h3 class="cover__subtitle">
+            По мотивам учебной темы о Транссибе — путешествие от столицы до
+            Байкала на электричках.
+          </h3>
+        </a>
+      </section>
       <footer class="footer">
         <div class="footer__links">
-          <a class="footer__link" href="https://yandex.ru/maps" target="_blank">Карты</a>
-          <a class="footer__link" href="https://yandex.ru/pogoda" target="_blank">Погода</a>
-          <a class="footer__link" href="https://rasp.yandex.ru" target="_blank">Расписание</a>
-          <a class="footer__link" href="https://calendar.yandex.ru" target="_blank">Календарь</a>
-          <a class="footer__link" href="https://travel.yandex.ru" target="_blank">Путешествия</a>
+          <a class="footer__link" href="https://yandex.ru/maps" target="_blank"
+            >Карты</a
+          >
+          <a
+            class="footer__link"
+            href="https://yandex.ru/pogoda"
+            target="_blank"
+            >Погода</a
+          >
+          <a class="footer__link" href="https://rasp.yandex.ru" target="_blank"
+            >Расписание</a
+          >
+          <a
+            class="footer__link"
+            href="https://calendar.yandex.ru"
+            target="_blank"
+            >Календарь</a
+          >
+          <a
+            class="footer__link"
+            href="https://travel.yandex.ru"
+            target="_blank"
+            >Путешествия</a
+          >
         </div>
-        <p class="footer__copyright">&#169 2022. Чихрадзе Георгий</p>
-      </footer> 
+        <p class="footer__copyright">&#169;2022. Чихрадзе Георгий</p>
+      </footer>
     </div>
   </body>
 </html>
