--- a/index.html
+++ b/index.html
@@ -44,75 +44,73 @@
           проехала 20 тысяч километров по родной стране. Мы выбрали и описали
           некоторые интересные места, достойные вашего отпуска.
         </p>
-        <p class="intro__list">
-          <br />
-          Часовых поясов 11
-          <br />
-          Объектов природного наследия ЮНЕСКО 12 <br />Объектов культурного
-          наследия ЮНЕСКО 16 <br />
-          Природных заповедников 105 <br />
-          Аэропортов 241
-        </p>
+        <div class="intro__list">
+         <p class="intro__list_item"> Часовых поясов 11 </p>
+         <p class="intro__list_item"> Объектов природного наследия ЮНЕСКО 12 </p>
+         <p class="intro__list_item">  Объектов культурного  наследия ЮНЕСКО 16</p>
+         <p class="intro__list_item"> Природных заповедников 105 </p>
+         <p class="intro__list_item">  Аэропортов 241</p> 
+        </div>
       </section>
       <section class="photo-grid">
         <img
           src="./images/photo-grid-train.jpg"
-          alt="1"
+          alt="фотка поезда"
           class="photo-grid__image"
         />
         <img
           src="./images/photo-grid-atharva-tulsi.jpg"
-          alt="2"
+          alt="фотка тулси"
           class="photo-grid__image"
         />
         <img
           src="./images/photo-grid-tuman.jpg"
-          alt="3"
+          alt="фотка туман"
           class="photo-grid__image"
         />
         <img
           src="./images/photo-grid-sochi.jpg"
-          alt="4"
+          alt="фотка сосхи"
           class="photo-grid__image"
         />
         <img
           src="./images/photo-grid-arisa.jpg"
-          alt="5"
+          alt="фотка ариса"
           class="photo-grid__image"
         />
         <img
           src="./images/photo-grid-baikal.jpg"
-          alt="6"
+          alt="фотка бай кал"
           class="photo-grid__image"
         />
         <img
           src="./images/photo-grid-elbrus.jpg"
-          alt="7"
+          alt="7фотка ельбрус"
           class="photo-grid__image"
         />
         <img
           src="./images/photo-grid-kondratiev.jpg"
-          alt="8"
+          alt="фотка кондратиеф"
           class="photo-grid__image"
         />
         <img
           src="./images/photo-grid-kamchatka-1.jpg"
-          alt="9"
+          alt="фотка кам чатка"
           class="photo-grid__image"
         />
         <img
           src="./images/photo-grid-kamchatka-2.jpg"
-          alt="10"
+          alt="фотка камча тка 2"
           class="photo-grid__image"
         />
         <img
           src="./images/photo-grid-baikal-2.jpg"
-          alt="11"
+          alt="фотка байкал 2"
           class="photo-grid__image"
         />
         <img
           src="./images/photo-grid-ergaki.jpg"
-          alt="12"
+          alt="фотка ергаки"
           class="photo-grid__image"
         />
       </section>
