--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
           некоторые интересные места, достойные вашего отпуска.
         </p>
         <div class="intro__list">
-         <p class="intro__list_item"> Часовых поясов 11 </p>
-         <p class="intro__list_item"> Объектов природного наследия ЮНЕСКО 12 </p>
-         <p class="intro__list_item">  Объектов культурного  наследия ЮНЕСКО 16</p>
-         <p class="intro__list_item"> Природных заповедников 105 </p>
-         <p class="intro__list_item">  Аэропортов 241</p> 
+         <p class="intro__list-item"> Часовых поясов 11 </p>
+         <p class="intro__list-item"> Объектов природного наследия ЮНЕСКО 12 </p>
+         <p class="intro__list-item">  Объектов культурного  наследия ЮНЕСКО 16</p>
+         <p class="intro__list-item"> Природных заповедников 105 </p>
+         <p class="intro__list-item">  Аэропортов 241</p> 
         </div>
       </section>
       <section class="photo-grid">
@@ -136,7 +136,7 @@
             </li>
 
             <li>
-              <p class="paragraph__first">
+              <p class="paragraph-first">
                 Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два
                 водных горизонта — спокойного Куршского залива с одной стороны и
                 подёрнутого рябью волн Балтийского моря с другой. Уникальная
@@ -144,7 +144,7 @@
               </p>
             </li>
             <li>
-              <p class="paragraph__second">
+              <p class="paragraph-second">
                 На этом Калининградская область не заканчивается. Для
                 путешественника и исследователя там же по соседству — самая
                 западная точка России, Балтийская коса, — и немецкое наследие
@@ -157,8 +157,8 @@
         </div>
 
         <div class="place">
-          <ul class="place__list_other">
-            <li><h3 class="place__title_other">Кольский</h3></li>
+          <ul class="place__list-other">
+            <li><h3 class="place__title-other">Кольский</h3></li>
             <li>
               <img
                 src="./images/place-kolsky.jpg"
@@ -179,14 +179,14 @@
             </li>
 
             <li>
-              <p class="paragraph__first">
+              <p class="paragraph-first">
                 Почти весь полуостров находится за Полярным кругом. Саамская
                 тундра, от которой на юг — тайга, а на север — Ледовитый океан,
                 прикидывающийся Баренцевым морем.
               </p>
             </li>
             <li>
-              <p class="paragraph__second">
+              <p class="paragraph-second">
                 Возможно, вы смотрели Звягинцева и даже слышали историю
                 арктического фестиваля в Териберке. Возможно, слово «Хибины» не
                 осталось под снегом школьных воспоминаний об уроках географии.
@@ -200,8 +200,8 @@
         </div>
 
         <div class="place">
-          <ul class="place__list_other">
-            <li><h3 class="place__title_other">Алтай</h3></li>
+          <ul class="place__list-other">
+            <li><h3 class="place__title-other">Алтай</h3></li>
             <li>
               <img
                 src="./images/place-altai.jpg"
@@ -222,7 +222,7 @@
             </li>
 
             <li>
-              <p class="paragraph__first">
+              <p class="paragraph-first">
                 Алтай — одно из красивейших мест в России. В первую очередь
                 из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные
                 соснами, горные реки и озёра. А если вы откроете в автомобиле
@@ -231,7 +231,7 @@
               </p>
             </li>
             <li>
-              <p class="paragraph__second">
+              <p class="paragraph-second">
                 Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом.
                 Так вы увидите всё разнообразие местной флоры и фауны. По лесам
                 Алтая бродят лоси, над хребтами летают орлы, а на равнинах
@@ -265,14 +265,14 @@
             </li>
 
             <li>
-              <p class="paragraph__first">
+              <p class="paragraph-first">
                 Всем известен Байкал как крупнейшее озеро в мире. Многие также
                 знают, что это самый большой источник пресной воды и одно из
                 красивейших мест в России.
               </p>
             </li>
             <li>
-              <p class="paragraph__second">
+              <p class="paragraph-second">
                 Конечно, это всё так. Но Байкал ещё идеальное место
                 для соревнований по скийорингу. Это такой вид спорта, когда
                 лыжник привязывает себя к мотоциклу, и тандем старается развить
@@ -285,8 +285,8 @@
         </div>
 
         <div class="place">
-          <ul class="place__list_other">
-            <li><h3 class="place__title_other">Карелия</h3></li>
+          <ul class="place__list-other">
+            <li><h3 class="place__title-other">Карелия</h3></li>
             <li>
               <img
                 src="./images/place-karelia.jpg"
@@ -304,7 +304,7 @@
             </li>
 
             <li>
-              <p class="paragraph__first">
+              <p class="paragraph-first">
                 Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу
                 сибирская лиственница не растёт западнее Водлозера. Зато здесь
                 она вымахивает на 30 метров — леса карельских национальных
