--- a/index.html
+++ b/index.html
@@ -6,29 +6,26 @@
     <title>Путешествие по России</title>
     <link rel="stylesheet" href="./pages/index.css" />
   </head>
-  <body class="body">
-    <div class="page">
-      <header class="header">
-        <img
-          src="./images/header-logo.svg"
-          alt="лого хедр"
-          class="header__logo"
-        />
-        <div class="header__lang-links">
-          <a href="#" class="header__lang-link header__lang-link_selected"
-            >Ru</a
-          >
-          <a href="#" class="header__lang-link">En</a>
-        </div>
-      </header>
-
+  <body class="page">
+    <header class="header">
+      <img
+        src="./images/header-logo.svg"
+        alt="лого хедр"
+        class="header__logo"
+      />
+      <div class="header__lang-links">
+        <a href="#" class="header__lang-link header__lang-link_selected">Ru</a>
+        <a href="#" class="header__lang-link">En</a>
+      </div>
+    </header>
+    <main>
       <section class="lead">
         <h1 class="lead__title">Путешествия по России</h1>
-        <h3 class="lead__subtitle">
+        <p class="lead__subtitle">
           Настоящая страна не в выпусках новостей, а здесь
-        </h3>
+        </p>
         <div class="lead__image"></div>
-        <div class="lead__caption">ВАША ПОЛКА - ВЕРХНЯЯ</div>
+        <p class="lead__caption">ВАША ПОЛКА - ВЕРХНЯЯ</p>
       </section>
 
       <section class="intro">
@@ -44,13 +41,17 @@
           проехала 20 тысяч километров по родной стране. Мы выбрали и описали
           некоторые интересные места, достойные вашего отпуска.
         </p>
-        <div class="intro__list">
-         <p class="intro__list-item"> Часовых поясов 11 </p>
-         <p class="intro__list-item"> Объектов природного наследия ЮНЕСКО 12 </p>
-         <p class="intro__list-item">  Объектов культурного  наследия ЮНЕСКО 16</p>
-         <p class="intro__list-item"> Природных заповедников 105 </p>
-         <p class="intro__list-item">  Аэропортов 241</p> 
-        </div>
+        <ul class="intro__list">
+          <li class="intro__list-item">Часовых поясов 11</li>
+          <li class="intro__list-item">
+            Объектов природного наследия ЮНЕСКО 12
+          </li>
+          <li class="intro__list-item">
+            Объектов культурного наследия ЮНЕСКО 16
+          </li>
+          <li class="intro__list-item">Природных заповедников 105</li>
+          <li class="intro__list-item">Аэропортов 241</li>
+        </ul>
       </section>
       <section class="photo-grid">
         <img
@@ -115,7 +116,7 @@
         />
       </section>
 
-      <section class="places">
+      <article class="places">
         <div class="place">
           <ul class="place__list">
             <li><h3 class="place__title">Куршская коса</h3></li>
@@ -318,50 +319,44 @@
             </li>
           </ul>
         </div>
-      </section>
+      </article>
       <section class="cover">
         <a
           class="cover__overlay"
           href="https://stampsy.com/na-elektrichkakh-do-baikala"
           target="_blank"
         >
-          <h2 class="cover__title">До Байкала «на собаках»</h2>
+          <h2 class="cover__title">До Байкала «на&nbsp;собаках»</h2>
 
-          <h3 class="cover__subtitle">
+          <p class="cover__subtitle">
             По мотивам учебной темы о Транссибе — путешествие от столицы до
             Байкала на электричках.
-          </h3>
+          </p>
         </a>
       </section>
-      <footer class="footer">
-        <div class="footer__links">
-          <a class="footer__link" href="https://yandex.ru/maps" target="_blank"
-            >Карты</a
-          >
-          <a
-            class="footer__link"
-            href="https://yandex.ru/pogoda"
-            target="_blank"
-            >Погода</a
-          >
-          <a class="footer__link" href="https://rasp.yandex.ru" target="_blank"
-            >Расписание</a
-          >
-          <a
-            class="footer__link"
-            href="https://calendar.yandex.ru"
-            target="_blank"
-            >Календарь</a
-          >
-          <a
-            class="footer__link"
-            href="https://travel.yandex.ru"
-            target="_blank"
-            >Путешествия</a
-          >
-        </div>
-        <p class="footer__copyright">&#169;2022. Чихрадзе Георгий</p>
-      </footer>
-    </div>
+    </main>
+    <footer class="footer">
+      <nav class="footer__links">
+        <a class="footer__link" href="https://yandex.ru/maps" target="_blank"
+          >Карты</a
+        >
+        <a class="footer__link" href="https://yandex.ru/pogoda" target="_blank"
+          >Погода</a
+        >
+        <a class="footer__link" href="https://rasp.yandex.ru" target="_blank"
+          >Расписание</a
+        >
+        <a
+          class="footer__link"
+          href="https://calendar.yandex.ru"
+          target="_blank"
+          >Календарь</a
+        >
+        <a class="footer__link" href="https://travel.yandex.ru" target="_blank"
+          >Путешествия</a
+        >
+      </nav>
+      <p class="footer__copyright">&#169;2022. Чихрадзе Георгий</p>
+    </footer>
   </body>
 </html>
