--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </section>
 
       <section class="intro">
-        <h3 class="intro__title">Чего мы там не видели?</h3>
+        <h2 class="intro__title">Чего мы там не видели?</h2>
         <p class="intro__text">
           По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только
           36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома,
@@ -116,8 +116,8 @@
         />
       </section>
 
-      <article class="places">
-        <div class="place">
+      <section class="places">
+        <article class="place">
           <ul class="place__list">
             <li><h3 class="place__title">Куршская коса</h3></li>
             <li>
@@ -155,9 +155,9 @@
               </p>
             </li>
           </ul>
-        </div>
+        </article>
 
-        <div class="place">
+        <article class="place">
           <ul class="place__list-other">
             <li><h3 class="place__title-other">Кольский</h3></li>
             <li>
@@ -198,9 +198,9 @@
               </p>
             </li>
           </ul>
-        </div>
+        </article>
 
-        <div class="place">
+        <article class="place">
           <ul class="place__list-other">
             <li><h3 class="place__title-other">Алтай</h3></li>
             <li>
@@ -241,9 +241,9 @@
               </p>
             </li>
           </ul>
-        </div>
+        </article>
 
-        <div class="place">
+        <article class="place">
           <ul class="place__list">
             <li><h3 class="place__title">Зимний Байкал</h3></li>
             <li>
@@ -283,9 +283,9 @@
               </p>
             </li>
           </ul>
-        </div>
+        </article>
 
-        <div class="place">
+        <article class="place">
           <ul class="place__list-other">
             <li><h3 class="place__title-other">Карелия</h3></li>
             <li>
@@ -318,8 +318,8 @@
               </p>
             </li>
           </ul>
-        </div>
-      </article>
+        </article>
+      </section>
       <section class="cover">
         <a
           class="cover__overlay"
